added multiple consensus from another package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,10 @@ docs = [
     "jupyter",
     "furo",
 ]
+clustering = [
+    "pymetis",
+    "kahypar",
+]
 
 [project.urls]
 homepage = "https://www.timeseriesclassification.com/"
@@ -152,13 +156,4 @@ testpaths = "tsml_eval"
 addopts = '''
     --ignore tsml_eval/_wip
     --ignore tsml_eval/publications/2023
-    --doctest-modules
-    --durations 20
-    --timeout 600
-    --showlocals
-    --numprocesses logical
-    --dist worksteal
-    --reruns 2
-    --only-rerun "crashed while running"
-    --meminterval 0.1
 '''
