--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ classifiers = [
 ]
 requires-python = ">=3.9,<3.13"
 dependencies = [
-    "aeon>=0.9.0,<0.10.0",
+#    "aeon>=0.9.0,<0.10.0",
+    "aeon@git+https://github.com/aeon-toolkit/aeon@main#egg=aeon",
     "tsml>=0.4.0,<0.5.0",
     "scikit-learn>=1.0.0,<1.6.0",
     "matplotlib",
@@ -54,6 +55,10 @@ all_extras = [
     "aeon[all_extras,dl]",
     "tsml[all_extras]",
     "xgboost",
+]
+clustering_extras = [
+    "kmedoids",
+    "tsfresh"
 ]
 unstable_extras = [
     "aeon[unstable_extras]",
