--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ classifiers = [
 ]
 requires-python = ">=3.9,<3.13"
 dependencies = [
-    "aeon>=0.10.0,<0.11.0",
+    "aeon@git+https://github.com/aeon-toolkit/aeon@ssg-test#egg=aeon",
     "tsml>=0.4.0,<0.5.0",
     "scikit-learn>=1.0.0,<1.6.0",
     "matplotlib",
