--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ classifiers = [
 ]
 requires-python = ">=3.9,<3.13"
 dependencies = [
-    "aeon>=1.0.0,<1.1.0",
+    "aeon@git+https://github.com/aeon-toolkit/aeon@soft-distance#egg=aeon",
+#    "aeon>=1.0.0,<1.1.0",
     "tsml>=0.5.0,<0.6.0",
     "scikit-learn>=1.0.0,<1.7.0",
     "matplotlib",
