--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.9,<3.14"
 dependencies = [
     "aeon>=1.0.0,<1.1.0",
     "tsml>=0.6.1,<0.7.0",
@@ -48,6 +48,7 @@ dependencies = [
     "seaborn",
     "gpustat",
     "psutil",
+    "imbalanced-learn"
 ]
 
 [project.optional-dependencies]
